--- a/liquidwar6-extra-maps/Makefile.in
+++ b/liquidwar6-extra-maps/Makefile.in
@@ -31,7 +31,7 @@ all:
 	make -C debian
 
 clean:
-	rm -f *.tar.gz *.zip *.deb *.rpm
+	rm -f *.tar.gz *.zip *.deb *.rpm *vendor*
 
 distclean: clean
 	rm -rf @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz $(srcdir)/autom4te.cache config.* *.spec Makefile
@@ -101,7 +101,7 @@ deb: @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz ${srcdir}/debian/changelog
 	cd ${TMP} && tar xzf @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz
 	cd ${PACKAGE_TMP} && ./configure
 	cd ${PACKAGE_TMP} && dpkg-buildpackage -k406FFCAB -rfakeroot || true
-	cp ${TMP}/*vendor* .
+	cp ${TMP}/@PACKAGE_TARNAME@*@PACKAGE_VERSION@*vendor* .
 	rm -rf ${TMP}
 
 rpm: @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz liquidwar6-extra-maps.spec
@@ -110,4 +110,6 @@ rpm: @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz liquidwar6-extra-maps.spec
 	cp @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz ${TMP}
 	echo "next command will prompt for root password"
 	cd ${TMP} && sudo rpmbuild -ta --sign @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz
-	echo "rm -rf ${TMP}"
+	cp /root/rpmbuild/SRPMS/@PACKAGE_TARNAME@*@PACKAGE_VERSION@*vendor*.src.rpm .
+	cp /root/rpmbuild/RPMS/*/@PACKAGE_TARNAME@*@PACKAGE_VERSION*vendor*.rpm .
+	rm -rf ${TMP}
