Trying to fix, yet again, RPM generation

--- a/liquidwar6/pkg/Makefile.am
+++ b/liquidwar6/pkg/Makefile.am
@@ -125,8 +125,8 @@ rpm: @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz liquidwar6.spec
 	cp @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz ${TMP}
 	echo "next command will require sudo to allow rpmbuild to be run"
 	cd ${TMP} && sudo rpmbuild -ta --sign @PACKAGE_TARNAME@-@PACKAGE_VERSION@.tar.gz
-	sudo cp /root/rpmbuild/SRPMS/@PACKAGE_TARNAME@*@PACKAGE_VERSION@*vendor*.src.rpm .
-	sudo cp /root/rpmbuild/RPMS/*/@PACKAGE_TARNAME@*@PACKAGE_VERSION@*vendor*.rpm .
+	sudo cp $$(find /root/rpmbuild/SRPMS/@PACKAGE_TARNAME@*@PACKAGE_VERSION@*vendor*.src.rpm) .
+	sudo cp $$(find /root/rpmbuild/RPMS/*/@PACKAGE_TARNAME@*@PACKAGE_VERSION@*vendor*.rpm) .
 	sudo chmod 666 *.rpm
 	rm -rf ${TMP}
 
