Added empty libmat library to anticipate vec and mat routines for mod-gles2

--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -363,6 +363,20 @@ src/lib/map/map-test.c
 src/lib/map/map-testmain.c
 src/lib/map/map-texture.c
 src/lib/map/map-weapon.c
+src/lib/mat/mat-fmat2.c
+src/lib/mat/mat-fmat3.c
+src/lib/mat/mat-fmat4.c
+src/lib/mat/mat-fvec2.c
+src/lib/mat/mat-fvec3.c
+src/lib/mat/mat-fvec4.c
+src/lib/mat/mat-imat2.c
+src/lib/mat/mat-imat3.c
+src/lib/mat/mat-imat4.c
+src/lib/mat/mat-ivec2.c
+src/lib/mat/mat-ivec3.c
+src/lib/mat/mat-ivec4.c
+src/lib/mat/mat-test.c
+src/lib/mat/mat-testmain.c
 src/lib/msg/msg-cmd.c
 src/lib/msg/msg-envelope.c
 src/lib/msg/msg-meta.c
