--- a/liquidwar6/src/lib/ldr/Makefile.am
+++ b/liquidwar6/src/lib/ldr/Makefile.am
@@ -27,16 +27,24 @@ TEST_SRC_FILE = ldr-test.c
 else
 TEST_SRC_FILE =
 endif
-libldr_la_SOURCES = ldr-body.c ldr-bw.c ldr-color.c ldr-cursortexture.c ldr-cursortexturelayer.c ldr-dir.c ldr-exp.c ldr-metalayer.c ldr-grease.c ldr-hints.c ldr-layer.c ldr-metadata.c ldr-param.c ldr-print.c ldr-read.c ldr-resampler.c ldr-rgba.c ldr-rules.c ldr-style.c ldr-teams.c $(TEST_SRC_FILE) ldr-texture.c ldr-use.c
+libldr_la_SOURCES = ldr-body.c ldr-bw.c ldr-color.c ldr-cursortexture.c ldr-cursortexturelayer.c ldr-dir.c ldr-exp.c ldr-metalayer.c ldr-grease.c ldr-hints.c ldr-layer.c ldr-metadata.c ldr-options.c ldr-param.c ldr-print.c ldr-read.c ldr-resampler.c ldr-rgba.c ldr-rules.c ldr-style.c ldr-teams.c $(TEST_SRC_FILE) ldr-texture.c ldr-use.c
 libldrdir= $(includedir)/@PACKAGE_TARNAME@/ldr
 libldr_HEADERS = ldr.h
 
 if LW6_CUNIT
 if !FULLSTATIC
-libexec_PROGRAMS = liquidwar6ldr-test
+libexec_PROGRAMS = liquidwar6-xml liquidwar6ldr-test
+liquidwar6_xml_SOURCES = ldr-xmlmain.c
+liquidwar6_xml_LDADD = libldr.la ../cfg/libcfg.la ../hlp/libhlp.la ../map/libmap.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 liquidwar6ldr_test_SOURCES = ldr-testmain.c
 liquidwar6ldr_test_LDADD = libldr.la ../cfg/libcfg.la ../hlp/libhlp.la ../map/libmap.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 TESTS = liquidwar6ldr-test
+endif
+else
+if !FULLSTATIC
+libexec_PROGRAMS = liquidwar6-xml
+liquidwar6_xml_SOURCES = ldr-xmlmain.c
+liquidwar6_xml_LDADD = libldr.la ../cfg/libcfg.la ../hlp/libhlp.la ../map/libmap.la ../sys/libsys.la @LW6_LIBINTL_LDADD@
 endif
 endif
 
