Packaging fix for 0.2.3551

--- a/liquidwar6/src/Makefile.am
+++ b/liquidwar6/src/Makefile.am
@@ -66,7 +66,7 @@ SUBDIRS = lib
 
 install-exec-local:
 	if which id && which ldconfig && test `id -u` -eq 0 && test "$(prefix)" != "/usr"; then ldconfig; fi # Run ldconfig automatically if we're root
-	if test -x $(DESTDIR)$(bindir)/liquidwar6; then mv $(DESTDIR)$(bindir)/liquidwar6 $(DESTDIR)$(bindir)/@PACKAGE_TARNAME@-@LW6_VERSION_BASE@; ln -s @PACKAGE_TARNAME@-@PACKAGE_VERSION@ $(DESTDIR)$(bindir)/liquidwar6; fi
+	if test -x $(DESTDIR)$(bindir)/liquidwar6; then mv $(DESTDIR)$(bindir)/liquidwar6 $(DESTDIR)$(bindir)/@PACKAGE_TARNAME@-@LW6_VERSION_BASE@; ln -s @PACKAGE_TARNAME@-@LW6_VERSION_BASE@ $(DESTDIR)$(bindir)/liquidwar6; fi
 
 uninstall-local:
 	rm -f $(DESTDIR)$(bindir)/@PACKAGE_TARNAME@-@LW6_VERSION_BASE@
