--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -434,6 +434,7 @@ src/lib/p2p/p2p-entry.c
 src/lib/p2p/p2p-explore.c
 src/lib/p2p/p2p-flush.c
 src/lib/p2p/p2p-node.c
+src/lib/p2p/p2p-packet.c
 src/lib/p2p/p2p-peeridlist.c
 src/lib/p2p/p2p-queueitem.c
 src/lib/p2p/p2p-recv.c
