--- a/liquidwar6/po/POTFILES.in
+++ b/liquidwar6/po/POTFILES.in
@@ -533,6 +533,7 @@ src/lib/sys/sys-build.c
 src/lib/sys/sys-cache.c
 src/lib/sys/sys-checksum.c
 src/lib/sys/sys-color.c
+src/lib/sys/sys-context.c
 src/lib/sys/sys-convert.c
 src/lib/sys/sys-cunit.c
 src/lib/sys/sys-daemon.c
@@ -542,7 +543,6 @@ src/lib/sys/sys-env.c
 src/lib/sys/sys-escape.c
 src/lib/sys/sys-exec.c
 src/lib/sys/sys-file.c
-src/lib/sys/sys-global.c
 src/lib/sys/sys-hash.c
 src/lib/sys/sys-hexa.c
 src/lib/sys/sys-history.c
